src/App.css
body {
  width: 90vw;
  margin: 0 auto;
}

.keyboard {
  display: flex;
  width: 90%;
  margin: 0 auto;
}

button {
  background-color: #fff;
  height: 150px;
  z-index: 0;
  width: 3em;
  position: relative;
  margin: 0 0 0 -8px;
}

button[class*='#'] {
  background-color: black;
  color: white;
  height: 75px;
  z-index: 4;
  width: 1em;
  margin: 0 0 0 -1em;
}

.control-panel {
  display: flex;
  padding: 20px;
}

.control-panel p {
  margin: 5px;
}

input[type='range' i] {
  width: 50vw;
}

.buttons {
  padding: 20px;
  width: 30vw;
  display: flex;
  flex-direction: column;
}

.buttons button {
  width: 100px;
  height: 40px;
}

